<resources>
    <string name="app_name">I Delivery</string>

    <string name="order">Order</string>
    <string name="delivery">delivery NOW</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="picture">Picture</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="total">Total</string>
    <string name="totalseeingmore">Toral :</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="comments">Comments</string>
    <string name="delet">Delet</string>
    <string name="noSize">No</string>
    <string name="cancel">Cancel</string>
    <string name="addanycomments">Do you want to add any comment about this item</string>


    <string name="see_more"> <u>See More</u>.</string>
    <string name="change">Change</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="yes_i_will_take_it">Yes i will take it</string>
    <string name="send">Send</string>
    <string name="cancelit">you can cancel it from inside</string>


    <string name="hello_world">Hello world!</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account"><u>No Account yet? Create new one</u>.</string>
    <string name="has_accoutn"><u>have Account? sign in Now!</u>.</string>
    <string name="advertisment">Android | Lollipop | Material | Yasir | Ameen | Login | Design | Activity | Blog | Facebook | Google | Kitkat | Marshmallow | Google</string>
    <string name="next_sign_up">Next</string>
    <string name="your_profile">Your profile</string>
    <string name="please_sign_in_now">Please Sign in now</string>
    <string name="get_help">Get help</string>
    <string name="comments_about">comments about : </string>
    <string name="masaage_to_developer">your massage will go to the developer of this app</string>
    <string name="user_massage_to_developer">Write your massage here</string>
    <string name="advantages">Advantages</string>
    <string name="disadvantages">disAdvantages</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="favorite">favorite</string>
    <string name="my_favorites">My favorites</string>
    <string name="user_to_resturants">this is a conversatin between you and sales man in the Resturants</string>
    <string name="offers">offers</string>
    <string name="conditions">Conditions : </string>
    <string name="in_days">in days</string>
    <string name="results">results</string>
    <string name="serial_number">serial Number</string>
    <string name="load_images">Load Images</string>
    <string name="save">Save</string>
    <string name="general_question">General Question</string>
    <string name="question_about_my_order">Question about my Order</string>
    <string name="Complaint">Complaint</string>
    <string name="please_specify_carefully">please specify carefully</string>
        <string name="problem_occurred">problem occurred <br/> please click here to reload</string>

</resources>
