<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yasmeen.nowaitressing1.liveChat">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/pb_getHelp"
        android:visibility="gone"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_to_resturants"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ringing"
        android:drawablePadding="5dp"
        android:layout_marginTop="5dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general_question"
        android:layout_marginTop="10dp"
        android:textColor="#00a1d2"
        android:onClick="general"
        android:background="@drawable/backgroud_button_send_massage"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_about_my_order"
        android:layout_marginTop="10dp"
        android:textColor="#00a1d2"
        android:onClick="aboutMyOrder"
        android:background="@drawable/backgroud_button_send_massage"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Complaint"
        android:layout_marginTop="10dp"
        android:textColor="#00a1d2"
        android:onClick="complaint"
        android:background="@drawable/backgroud_button_send_massage"
        />
</LinearLayout>
