<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yasmeen.nowaitressing1.getHelpDelvelper">
   <ProgressBar
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:id="@+id/pb_getHelp"
       android:visibility="gone"

       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masaage_to_developer"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ringing"
        android:drawablePadding="5dp"
        android:layout_marginTop="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/massage_getHelp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:maxLines="5"
        android:textStyle="bold"
        android:hint="@string/user_massage_to_developer"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advantages"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/advantages"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/advantages"
        android:textSize="17sp"
        android:textColor="#000000"
        android:maxLines="5"
        android:textStyle="bold"
        android:hint="@string/advantages"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disadvantages"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/disadvantages"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:id="@+id/disadvantages"
        android:layout_marginRight="5dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:maxLines="5"
        android:textStyle="bold"
        android:hint="@string/disadvantages"
        android:layout_gravity="center_horizontal"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="#00a1d2"
        android:onClick="send_to_developer"
        android:background="@drawable/backgroud_button_send_massage"
        />
</LinearLayout>
