<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cakephoto"

    android:fitsSystemWindows="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yasmeen.nowaitressing1.signUp"
    android:orientation="vertical">



    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressbar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="SIGN UP"
        android:textSize="70sp"
        android:id="@+id/textView"
        android:textColor="#dbdbdb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="5dp"

                android:padding="10dp"
                android:textColor="#ffffff"
                android:hint="@string/name"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:drawablePadding="5dp"

                android:drawableLeft="@drawable/emailedited"
                android:padding="10dp"

                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/vpnkey"
                android:textColor="#ffffff"
                android:drawablePadding="5dp"

                android:padding="10dp"
                android:hint="@string/pass"/>
        </android.support.design.widget.TextInputLayout>
        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/vpnkey"
                android:textColor="#ffffff"
                android:drawablePadding="5dp"

                android:padding="10dp"
                android:hint="@string/confirmpass"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <!-- Signup Button -->

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="#fe4080"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:text="@string/next_sign_up"
            android:onClick="next"/>
    <TextView
        android:id="@+id/link_signup"
        style="?android:textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="hasOne"
        android:text="@string/has_accoutn"
        android:textColor="#00a1d2"
        android:textSize="16dip" />
</LinearLayout>
</ScrollView>