<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#dbdbdb"
    tools:context="com.example.yasmeen.nowaitressing1.moreDataOfItem">

   <ImageView
        android:id="@+id/imageViewOfItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:background="@drawable/backgroud_of_layout_of_moredata"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/nameOfItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="meet"
            android:textColor="#00a7f5"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moreInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="3.8"
                android:maxLines="1"
                android:text="meet"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:text="@string/see_more"
                android:textSize="15sp"
                android:textColor="#00a1d2"
                android:onClick="seemore"
                android:visibility="gone"
                android:id="@+id/seemore"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000 $"
                android:textColor="#f92a3f"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/price_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="1000 $"
                android:textColor="#f92a3f"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/price_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="1000 $"
                android:textColor="#f92a3f"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/backgroud_of_layout_of_moredata"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"

        android:weightSum="10">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.1"
            android:background="@drawable/plus"
            android:onClick="plus" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.2">

        </LinearLayout>

        <TextView
            android:id="@+id/quantitiy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.1">

        </LinearLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1.2"
            android:background="@drawable/minus"
            android:onClick="minus" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:background="@drawable/backgroud_of_layout_of_moredata"
        android:weightSum="3">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/small"
            android:checked="true"
            android:id="@+id/checkbox_small"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/medium"
            android:id="@+id/checkbox_medium"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/large"
            android:id="@+id/checkbox_large"
            />
    </LinearLayout>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/comments"
    android:layout_weight="0.5"
    android:maxLines="2"

    android:hint="@string/addanycomments"

    />

    <Button
        android:id="@+id/saveItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_weight="1.2"

        android:background="#fe4080"
        android:onClick="saveItem"
        android:padding="12dp"
        android:text="@string/add_to_cart"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/totalword_seemore"
            android:text="@string/total"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/total_moreData"
            android:text="total"
            android:textSize="18dp"
            android:textColor="#f92a3f"/>
    </LinearLayout>
</LinearLayout>
<!--</ScrollView>-->
